# test

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
